# CoScientist

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
backend/benchmarks/: __init__.py
backend/benchmarks/graders/: citation_grader.py  controls_grader.py  eln_grader.py  llm_judge.py  multiple_choice_grader.py
backend/benchmarks/results/: summary.md
backend/benchmarks/runners/: agent_harness.py  download_datasets.py  eval_runner.py
backend/eln/: __init__.py  config.py
backend/eln/agents/: SOUL.md  __init__.py  controls_generator.py  data_analyst.py  debate_manager.py  eln_scribe.py  experiment_manager.py  hypothesis_generator.py  image_analyst.py  literature_scout.py  memory_agent.py  sop_adapter.py  state.py  structure_analyst.py  supervisor.py  target_intelligence.py  tool_executor.py  troubleshooter.py
backend/eln/agents/debate/: __init__.py  agents.py  (+2 more)
backend/eln/audit/: __init__.py  logger.py  singleton.py  validator.py
backend/eln/cli/: banner.py
backend/eln/mcp/: client.py
backend/eln/memory/: __init__.py  episodic_store.py  graph_store.py  memory_manager.py
backend/eln/models/: __init__.py  artifact.py  citation.py  debate.py  experiment.py  hypothesis.py  memory.py  run_manifest.py  target_analysis.py  template.py  workspace.py
backend/eln/providers/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py  vision_utils.py
backend/eln/renderer/: __init__.py  renderer.py
backend/eln/retrieval/: __init__.py  indexer.py  ingester.py  retriever.py
backend/eln/skills/: __init__.py
backend/eln/storage/: __init__.py  base.py  factory.py  local.py  s3.py
backend/eln/templates/: __init__.py  extractor.py  store.py
backend/eln/tools/: alphafold_tools.py  analysis_tools.py  debate_tools.py  diff_tools.py  experiment_tools.py  export_tools.py  file_tools.py  hypothesis_tools.py  image_tools.py  literature_tools.py  memory_tools.py  registry.py  retrieval_tools.py  simulation_tools.py  target_intelligence_tools.py
backend/eln/tracing/: __init__.py  decorators.py  otel_callback.py  setup.py
backend/eln/workspace/: __init__.py  debate_store.py  experiment_store.py  hypothesis_store.py  kb_store.py  manager.py  run_store.py  target_analysis_store.py
backend/routes/: chat.py  documents.py  experiments.py  hypotheses.py  metrics.py  target_analysis.py  workspace.py
(+83 files in other folders)
